WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162541
Regression(
r206356
): Caused crashes for !NETWORK_SESSION code path
https://bugs.webkit.org/show_bug.cgi?id=162541
Summary
Regression(r206356): Caused crashes for !NETWORK_SESSION code path
Chris Dumez
Reported
2016-09-25 17:46:52 PDT
Regression(
r206356
): Caused crashes for !NETWORK_SESSION code path: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000110cb0627 WTFCrash + 39 (Assertions.cpp:323) 1 com.apple.WebKit 0x000000010c4d8517 WebKit::Download::platformInvalidate() + 87 (DownloadMac.mm:122) 2 com.apple.WebKit 0x000000010c4d044c WebKit::Download::~Download() + 44 (Download.cpp:74) 3 com.apple.WebKit 0x000000010c4d05b5 WebKit::Download::~Download() + 21 (Download.cpp:75) 4 com.apple.WebKit 0x000000010c4d05d9 WebKit::Download::~Download() + 25 (Download.cpp:71) 5 com.apple.WebKit 0x000000010c4ddd85 WTF::KeyValuePairHashTraits<WTF::HashTraits<WebKit::DownloadID>, WTF::HashTraits<std::__1::unique_ptr<WebKit::Download, std::__1::default_delete<WebKit::Download> > > >::customDeleteBucket(WTF::KeyValuePair<WebKit::DownloadID, std::__1::unique_ptr<WebKit::Download, std::__1::default_delete<WebKit::Download> > >&) + 197 (HashTraits.h:307) 6 com.apple.WebKit 0x000000010c4ddcb5 std::__1::enable_if<HashTraitHasCustomDelete<WTF::HashMap<WebKit::DownloadID, std::__1::unique_ptr<WebKit::Download, std::__1::default_delete<WebKit::Download> >, WTF::DownloadIDHash, WTF::HashTraits<WebKit::DownloadID>, WTF::HashTraits<std::__1::unique_ptr<WebKit::Download, std::__1::default_delete<WebKit::Download> > > >::KeyValuePairTraits,
Attachments
Patch
(9.11 KB, patch)
2016-09-25 18:28 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-09-25 18:28:18 PDT
Created
attachment 289791
[details]
Patch
Chris Dumez
Comment 2
2016-09-25 19:36:40 PDT
Comment on
attachment 289791
[details]
Patch I confirmed that the crashes are gone locally with NETWORK_SESSION disabled.
WebKit Commit Bot
Comment 3
2016-09-25 22:38:14 PDT
Comment on
attachment 289791
[details]
Patch Clearing flags on attachment: 289791 Committed
r206367
: <
http://trac.webkit.org/changeset/206367
>
WebKit Commit Bot
Comment 4
2016-09-25 22:38:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug