Source/WebKit2/NetworkProcess/Downloads/Download.h
@@ -115,6 +115,7 @@ private:
 #if !USE(NETWORK_SESSION)
     void startNetworkLoad();
 #endif
+    void cancelNetworkLoad();
 
     void platformInvalidate();
 
